2001-09-17  Frank Warmerdam  <warmerdam@pobox.com>

	* configure.in: don't add /usr/local/lib to LIBS by default.  It
	makes it hard to avoid using stuff from /usr/local.

============================================================================

2001-09-17  Frank Warmerdam  <warmerdam@pobox.com>

	* OGDI 3.0 Final Released	
	
2001-08-27  Frank Warmerdam  <warmerdam@pobox.com>

	* OGDI 3.1Beta2 Issued.

	* ogdi/driver/rpf/rpf.c: Fixed computation of width and height in
	GetRasterInfo().  Update test suite accordingly.

	* vpflib/muse_dir.c: Fixed check for DOT_FOUND to only look in
	the last component of the path, not the whole path, otherwise
	directories with dots in them cause problems.

	* external/expat/makefile: fixed declaration for WORDS_BIGENDIAN
	macro.

2001-08-16  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/driver/vrf: feature.c, vrf.h
	Removed MAXRINGS and MAXSEGS limits. Arrays now dynamically grown.
	See Bug 450045.

	* ogdi/driver/vrf: vrf.c, vrf.h, object.c, feature.c:
	added support for merging line features based on the relationship
	implied by the join table (relating a set of primitive geometries
	with one feature).  This patch was submitted by Frank Warmerdam in
	1999.  See bug 222422.

	* ogdi/driver/vrf/utils.c: partially rewrite 
	vrf_build_coverage_capabilities() to avoid repeating entries and
	to get rid of temp. 

	* ogdi/contrib/ogdi_import/ogdi_import.c: fixed roundoff
	error in calcuation of xsize/ysize from region.

	* ogdi/c-api/client.c: Modified cln_ConvRegion() to avoid roundoff
	errors in initial computation of intwidth and intheight.  As per
	bug 450042.
	
	* ogdi/driver/rpf/rpf.c: Ensure that only Image and Matrix types
	are accepted by dyn_SelectLayer().

2001-07-17  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/include/ecs_util.h: fixed case where DISABLE_CVSID is defined.

	* contrib/ogdi_info/ogdi_info.c: fixed reporting of text layers.

	* contrib/ogdi_import/ogdi_import.c: added support for writing 