@@ -19,7 +19,10 @@
  ******************************************************************************
  *
  * $Log$
- * Revision 1.11  2001-07-18 03:55:09  warmerda
+ * Revision 1.12  2001-09-28 18:56:20  warmerda
+ * added OGDI_VERSION and OGDI_RELEASEDATE
+ *
+ * Revision 1.11  2001/07/18 03:55:09  warmerda
  * Fixed case where DISABLE_CVSID is defined.
  *
  * Revision 1.10  2001/06/22 16:28:24  warmerda
@@ -41,6 +44,9 @@
 
 #ifndef ECS_UTIL
 #define ECS_UTIL 1
+
+#define OGDI_VERSION     310
+#define OGDI_RELEASEDATE 20010928
 
 #include <stdio.h>
 #include <stdlib.h>
