@@ -1,3 +1,8 @@
+2001-09-28  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* ogdi/include/ecs_util.h: Added the OGDI_VERSION and OGDI_RELEASEDATE
+	macros in ecs_util.h.
+
 2001-09-17  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* configure.in: don't add /usr/local/lib to LIBS by default.  It
